pbc_contract_codegen/tests/action/fail/zk/secret_input_struct_not_secret.stderr
error[E0277]: the trait bound `SecretStruct: pbc_zk::SecretBinary` is not satisfied
  --> tests/action/fail/zk/secret_input_struct_not_secret.rs:12:1
   |
12 | #[zk_on_secret_input(shortname = 0x04, secret_type = "SecretStruct")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `pbc_zk::SecretBinary` is not implemented for `SecretStruct`
   |
   = help: the following other types implement trait `pbc_zk::SecretBinary`:
             bool
             pbc_zk::sbi::Sbi<NT>
note: required by a bound in `FnAbi::secret_argument`
  --> $WORKSPACE/pbc_contract_core/src/abi/func.rs
   |
   |     pub fn secret_argument<T: CreateTypeSpec + SecretBinary>(
   |                                                ^^^^^^^^^^^^ required by this bound in `FnAbi::secret_argument`
   = note: this error originates in the attribute macro `zk_on_secret_input` (in Nightly builds, run with -Z macro-backtrace for more info)
